--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 	<head>
 		<title><%= title %></title>
 		<link rel='stylesheet' href='/stylesheets/style.styl' />
-		<link rel="stylesheet" type="text/css" href="/stylesheets/foundation.min.css"/>
+		<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.css"/>
 		<script type="text/javascript" src="/javascripts/jquery-1.10.2.min.js"></script>
 		<script type="text/javascript" src="/javascripts/angular.js"></script>
 	</head>
@@ -31,4 +31,11 @@
 	<!-- directives -->
 	<script type="text/javascript" src="/AngularApp/directives/ConnectionGraph.js"></script>
 	<script type="text/javascript" src="/AngularApp/directives/debug.js"></script>
+
+	<!-- bootstrap -->
+	<script type="text/javascript" src="/javascripts/bootstrap.js"></script>
+	<link rel="stylesheet" type="text/css" href="/stylesheets/animations.css"/>
+	
+	<!-- d3 visualization -->
+	<script type="text/javascript" src="/javascripts/d3.v3.js"></script>
 </html>
