--- a/public/stylesheets/d3stylesheet.css
+++ b/public/stylesheets/d3stylesheet.css
@@ -8,5 +8,23 @@ svg .pumpkin
 .mySvgClass
 {
 	position:relative;
-	float:left;
+	float:right;
+}
+
+.link {
+	fill: none;
+	stroke: #9ecae1;
+	stroke-width: 1.5px;
+}
+
+.node text {
+	pointer-events: none;
+	font: 10px sans-serif;
+}
+.node:not(:hover) .nodetext {
+	display: none;
+}
+.nodeImg
+{
+	//border-radius: 20px; //doesn't work
 }
