--- a/public/AngularApp/views/ConnectionGraph.html
+++ b/public/AngularApp/views/ConnectionGraph.html
@@ -76,13 +76,13 @@
 								<!-- show user -->
 								<div ng-show=" idToName[ 'userMap' ][ user ] ">
 									<div class="profileImgDiv">
-										<a href="{{ idToName[ 'userMap' ][ user ].Id }}">
+										<a href="{{oauthObj.instance_url}}/{{ idToName[ 'userMap' ][ user ].Id }}" target="_top">
 											<img class="profileImg" src="{{ idToName[ 'userMap' ][ user ].FullPhotoUrl }}" alt="img"/>
 										</a>
 									</div>
 									<div class="profileDetailDiv">
 										<span class="badge">
-											<a href="{{ idToName[ 'userMap' ][ user ].Id }}">
+											<a href="{{oauthObj.instance_url}}/{{ idToName[ 'userMap' ][ user ].Id }}" target="_top">
 												{{ idToName[ "userMap" ][ user ].Name }} <!--{{ globalUserMap[ user ].d3index }}-->
 											</a>
 										</span>
@@ -102,13 +102,13 @@
 								<!-- show chatter group -->
 								<div ng-show=" idToName[ 'chatterGroupMap' ][ user ] ">
 									<div class="profileImgDiv">
-										<a href="{{ idToName[ 'chatterGroupMap' ][ user ].Id }}">
+										<a href="{{oauthObj.instance_url}}/{{ idToName[ 'chatterGroupMap' ][ user ].Id }}" target="_top">
 											<img class="profileImg" src="{{ idToName[ 'chatterGroupMap' ][ user ].FullPhotoUrl }}" alt="img"/>
 										</a>
 									</div>
 									<div class="profileDetailDiv">
 										<span class="badge">
-											<a href="{{ idToName[ 'chatterGroupMap' ][ user ].Id }}">
+											<a href="{{oauthObj.instance_url}}/{{ idToName[ 'chatterGroupMap' ][ user ].Id }}" target="_top">
 												{{ idToName[ "chatterGroupMap" ][ user ].Name }} <!--{{ globalUserMap[ user ].d3index }}-->
 											</a>
 										</span>
