--- a/public/stylesheets/connectiongraphstyle.css
+++ b/public/stylesheets/connectiongraphstyle.css
@@ -23,11 +23,15 @@ div.bar {
 	position:relative;
 	float:left;
 	padding: 0 10px;
+	line-height: 11px;
 }
 .profileImg
 {
 	width:50px;
-	border-radius: 15px;
+	height:50px;
+	-webkit-border-radius: 500px;
+	-moz-border-radius: 500px;
+	border-radius: 500px;
 }
 ul
 {
@@ -55,5 +59,6 @@ ul
 /*bootstrap mods*/
 .well
 {
-	padding: 6px;
+	margin-bottom: 1px;
+	padding: 2px 5px;
 }
