now trying to get path to look right

--- a/public/AngularApp/views/ConnectionGraph.html
+++ b/public/AngularApp/views/ConnectionGraph.html
@@ -21,8 +21,7 @@
 							<li class="list-group-item animate-repeat" ng-repeat="user in path | filter:q">
 								<!-- show user -->
 								<div ng-show=" idToName[ 'userMap' ][ user ] ">
-									<div class="profileImgDiv" ng-if="$first">
-										{{$first}}
+									<div class="profileImgDiv" style="margin-left: 9px;" ng-hide="$first">
 										<img src="https://cdn1.iconfinder.com/data/icons/blueberry/32/arrow_down.png"/>
 									</div>
 
