--- a/public/stylesheets/connectiongraphstyle.css
+++ b/public/stylesheets/connectiongraphstyle.css
@@ -4,6 +4,12 @@ div.bar {
     height: 75px;   /* We'll override this later */
     background-color: teal;
 }
+
+#myD3Div
+{
+	width: 450px;
+	margin: 0 auto;
+}
 #connectionGraphic
 {
 	width:100%;
@@ -52,8 +58,8 @@ ul
 	position:relative;
 	float:left;
 	clear:both;
-	padding:3px;
-	margin: 5px;
+	padding:0 0 1px 0;
+	margin: 1px 0 0 0;
 	font-size: 10px;
 	/*-webkit-transition:all 0.4s ease-in-out;*/
 }
